--- a/pages/alquiler.html
+++ b/pages/alquiler.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../images/android-icon-36x36.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../imagenes/android-icon-36x36.png" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Pacifico&family=Passions+Conflict&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <title>Alquileres</title>
 </head>
 <body>
     <header class="header">
-        <img src="../imagenes/logo_inmobiloaria21.jpeg" alt="" width="300" height="63vh">
+        <div class="animacion_logo">
+            <img src="../imagenes/logo_inmobiloaria21.jpeg" alt="" width="300" height="63vh">
+        </div>
         <nav >
             <ul>
                 <li><a href="../index.html">inicio</a></li>
@@ -47,7 +50,7 @@
             </ul>
         </div>
         <div class="position-absolute bottom-0 start-0">
-            <p>proyecto creado por: <span>G.González</span></p>
+            <p>proyecto creado por: <strong>G.González</strong></p>
         </div>
        
         
