--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
 </head>
 <body>
     <header class="header">
-        <section id="foto_pag_inicio">
+        <section >
             <img src="./imagenes/logo_inmobiloaria21.jpeg" alt="" width="300" height="63vh">
-            <nav >
         </section>
         <nav >
             <ul>
@@ -29,7 +28,7 @@
     </header>
     <main  class="main">
         <section id="foto_pag_inicio">
-            <img src="./imagenes/foto_casa_familia.jpg" alt=" "width="900" height="500">
+            <img src="./imagenes/foto_casa_familia.jpg" alt="" width ="900em" height="500em">
         </section>
     <footer class="footer">
         <div class="position-absolute bottom-0 end-0">
