segunda pre entrega

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header">
         <section >
-            <img src="./imagenes/logo_inmobiloaria21.jpeg" alt="" width="300" height="63vh">
+            <img class="logo" src="./imagenes/logo_inmobiloaria21.jpeg" alt="" width="300" height="63vh">
         </section>
         <nav >
             <ul>
