--- a/pages/venta.html
+++ b/pages/venta.html
@@ -12,8 +12,8 @@
 </head>
 <body  id="GRILLA">
     <header class="header">
-        <div class="animacion_logo">
-            <img src="../imagenes/logo_inmobiloaria21.jpeg" alt="" width="300" height="63vh">
+        <div >
+            <img class="logo" src="../imagenes/logo_inmobiloaria21.jpeg" alt="" width="300" height="63vh">
         </div>
         <nav >
             <ul>
