--- a/pages/alquiler.html
+++ b/pages/alquiler.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header">
         <div class="animacion_logo">
-            <img src="../imagenes/logo_inmobiloaria21.jpeg" alt="" width="300" height="63vh">
+            <img class="logo" src="../imagenes/logo_inmobiloaria21.jpeg" alt="" width="300" height="63vh">
         </div>
         <nav >
             <ul>
