--- a/pages/terrenos.html
+++ b/pages/terrenos.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="header">
-        <img src="../imagenes/logo_inmobiloaria21.jpeg" alt="" width="300" height="63vh">
+        <img class="logo" src="../imagenes/logo_inmobiloaria21.jpeg" alt="" width="300" height="63vh">
         <nav >
             <ul>
                 <li><a href="../index.html">inicio</a></li>
